fixed alignment announcement delete button

--- a/assets/css/webAppMain.css
+++ b/assets/css/webAppMain.css
@@ -5,3 +5,7 @@
 .navbuttons {
 	width: 100%;
 }
+
+.centerButton{
+	padding-top: 0.4%;
+}
